fixing not showing hero-bg after deployment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,7 @@ p {
   color: #fff;
 }
 .header-banner {
-  background-image: url('../images/hero-bg.png');
+  background: url('../images/hero-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
